5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1674_1879.log
== TEST (2019-04-25 13:06:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("numero de horas extras:"))
f = float(input("numero de faltas: "))

h = e (-1/4*f) 
z = round(h,2)
print(e,"extras e",f,"de falta")

if(z > 400):
	print("R$ 500.0")
else(h <= 400)
	print("R$ 100.0")
	
	
-- ERROR:
File "XXXX", line 11
    else(h <= 400)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 13:06:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("numero de horas extras:"))
f = float(input("numero de faltas: "))

h = e (-1/4*f) 
z = round(h,2)
print(e,"extras e",f,"de falta")

if(z > 400):
	print("R$ 500.0")
else:
	print("R$ 100.0")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    h = e (-1/4*f) 
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 13:07:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("numero de horas extras:"))
f = float(input("numero de faltas: "))

h = e-(1/4*f) 
z = round(h,2)
print(e,"extras e",f,"de falta")

if(z > 400):
	print("R$ 500.0")
else:
	print("R$ 100.0")
	
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 13:07:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("numero de horas extras:"))
f = float(input("numero de faltas: "))

h = e-(1/4*f) 
z = round(h,2)
print(e,"extras e",f,"de falta")

if(z > 400):
	print("R$ 500.0")
else:
	print("R$ 100.0")
	
	
-- EXECUTION TIME:
0.165008
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
